[package]
name = "process"
version = "0.1.0"
authors = ["guy <guy123levinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "^0"
gtk = "^0"
pango = "^0"
atk = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
atk-sys = "^0"
cairo-rs = { version = "^0", features = ["png"] }
lazy_static = "1.4.0"
global = "0.4.0"
